# django-phonemask-additions

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml
config/: settings.py  urls.py
django_phonemask_additions/: admin.py  apps.py  forms.py  instructions.py  models.py  urls.py  views.py
django_phonemask_additions/templates/django_phonemask_additions/: admin_panel.html  change_password.html  home.html  login.html  register_user.html  success.html  update_user.html  validate.html
